# barton-link

./: .gitignore  README.md  dev-setup.sh  pyproject.toml  pytest.ini  run.sh
examples/: gdocs.py
src/barton_link/: barton_link.py  base_parser.py  database.py  gdocs.py  gdocs_parser.py  markdown_parser.py  parser_excerpt.py  server.py
src/barton_link/tests/: __init__.py  test_base_parser.py  test_markdown_parser.py
src/excerpts/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
src/excerpts/migrations/: 0001_initial.py  0002_excerptsimilarity.py  0002_job.py  0002_rename_excerpt_excerpt_content_excerptversion.py  0003_alter_excerpt_tags.py  0003_job_total.py  0003_remove_excerptsimilarity_spacy_similarity.py  0004_excerpt_deleted_at_excerpt_is_deleted.py  0004_excerptautotag.py  0004_tagtype_tag_tag_type.py  0005_alter_excerptautotag_excerpt.py  0005_character_deleted_at_character_is_deleted_and_more.py  0006_rename_character_entity_and_more.py  0007_alter_tag_type.py  0007_concept_relationshiptype_entityrelationship_and_more.py  0008_dataset_excerpt_dataset.py  0008_excerptrelationship_remove_character_projects_and_more.py  0008_remove_excerpt_entities_entityrelationship_created_and_more.py  0009_excerptrelationship_created_and_more.py
src/excerpts/services/: __init__.py  autotag.py  service.py  similarity_analysis.py
src/excerpts/urls/: __init__.py  entity_urls.py  excerpt_urls.py  import_urls.py  relationship_urls.py  tag_urls.py  tool_urls.py
src/excerpts/views/: __init__.py  datasets.py  entities.py  excerpts.py  projects.py  relationship_views.py  tag_types.py  tags.py  tools.py
src/server/: settings.py  urls.py
(+128 files in other folders)
