[project]
name = "barton-link"
version = "0.1.0"
description = ""
authors = [
	{ name = "Cammy", email = "cameronsteele@steelecameron.com" }
]
readme = "README.md"
#requires-python = ">=3.9.0,<3.11"
dependencies = [
	"spacy >=3.5.3, <4.0",
	"Django >=4.2.1, <5.0",
	#"spacy[cuda-autodetect] >=3.5.3, <4.0",
]

[project.optional-dependencies]
googledocs = [
	"google-api-python-client",
	"google-auth-httplib2",
	"google-auth-oauthlib"
]
similarity = [
	"sentence-transformers"
]
all = [
	"google-api-python-client",
	"google-auth-httplib2",
	"google-auth-oauthlib",
	"sentence-transformers"
]

[build-system]
requires = ["setuptools >= 67.7.2", "wheel >= 0.40.0"]
build-backend = "setuptools.build_meta"
